--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "next": "13.3.0",
-    "postcss": "8.4.21",
+    "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "sass": "^1.62.0"
   }
 }
