--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.348.0",
-    "@types/node": "20.2.5",
+    "@aws-sdk/client-s3": "^3.350.0",
+    "@types/node": "20.2.6",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "mime-types": "^2.1.35",
     "mongodb": "^5.6.0",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
@@ -27,7 +28,8 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/mime-types": "^2.1.1",
     "@types/navermaps": "^3.6.5",
-    "sass": "^1.63.2"
+    "sass": "^1.63.3"
   }
 }
