--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
+    "react-simple-code-editor": "^0.13.1",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.2",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@types/mime-types": "^2.1.1",
     "@types/navermaps": "^3.6.5",
+    "@types/prismjs": "^1.26.0",
     "sass": "^1.63.3"
   }
 }
