--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.353.0",
+    "@aws-sdk/client-s3": "^3.354.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -19,6 +19,7 @@
     "next": "13.4.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
+    "primereact": "^9.5.0",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
